# mp2-lab2-matrix

./: CMakeLists.txt
cmake/: function.cmake
include/: tmatrix.h
samples/: CMakeLists.txt
test/: test_tmatrix.cpp  test_tvector.cpp
